changing Receipt functionalities; restAssured for Receipt